# citra

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  Makefile.common  build-libretro-android.sh  build-libretro-linux.sh  build-libretro-windows.sh  build-libretro.sh
CMakeModules/: x86_64-w64-mingw32.cmake
jni/: Android.mk  Application.mk
src/: CMakeLists.txt
src/audio_core/: CMakeLists.txt  cubeb_input.cpp  cubeb_input.h  dsp_interface.cpp  libretro_sink.cpp  libretro_sink.h  sink.h  sink_details.cpp  sink_details.h
src/citra/emu_window/: emu_window_sdl2.cpp  emu_window_sdl2.h
src/citra_libretro/: CMakeLists.txt  citra_libretro.cpp  citra_libretro.h  core_settings.cpp  core_settings.h  environment.cpp  environment.h  libretro_logger.cpp  libretro_logger.h  libretro_window.cpp  libretro_window.h
src/citra_libretro/emu_window/: libretro_window.cpp  libretro_window.h
src/citra_libretro/input/: input_factory.cpp  input_factory.h  mouse_tracker.cpp  mouse_tracker.h
src/citra_libretro/vulkan/: vk_swapchain.cpp  vk_swapchain.h
src/citra_qt/: bootmanager.cpp  bootmanager.h  main.cpp
src/common/: CMakeLists.txt  file_util.cpp  file_util.h  scm_rev.cpp
src/common/logging/: backend.cpp  backend.h
src/core/: CMakeLists.txt  core.cpp  core.h  savestate.cpp
src/core/dumping/: backend.cpp
src/core/frontend/: emu_window.cpp  emu_window.h
src/core/hle/kernel/: process.cpp  shared_memory.cpp  vm_manager.cpp  vm_manager.h
src/core/hle/service/: soc_u.cpp
src/core/hle/service/cfg/: cfg.cpp
src/input_common/: CMakeLists.txt
src/input_common/libretro/: libretro.cpp  libretro.h
src/network/: network.cpp  room.cpp  room_member.cpp
src/video_core/: CMakeLists.txt  rasterizer_accelerated.h  renderer_base.h  video_core.cpp
src/video_core/renderer_opengl/: gl_resource_manager.cpp  gl_resource_manager.h  gl_shader_decompiler.cpp  gl_shader_disk_cache.cpp  gl_state.cpp  gl_state.h  renderer_opengl.cpp  renderer_opengl.h
src/video_core/renderer_vulkan/: renderer_vulkan.cpp  renderer_vulkan.h  vk_instance.cpp  vk_instance.h  vk_platform.cpp  vk_platform.h  vk_present_window.cpp  vk_present_window.h  vk_swapchain.cpp  vk_swapchain.h
src/video_core/shader/generator/: glsl_shader_decompiler.cpp
